Upgrades Laravel Zero

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "php": ">=7.1",
         "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.4",
-        "laravel-zero/framework": "4.0.*",
-        "league/flysystem": "^1.0"
+        "laravel-zero/framework": "4.0.*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
